fix: add larger image for the twitter card

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&display=swap" rel="stylesheet">
+    
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:title" content="Smithmas Wishlist">
+    <meta property="og:description" content="Tell us what you'd like for Christmas!">
+    <meta property="og:image" content="https://YOUR-SITE.vercel.app/big_santa_banana.png">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    
     <title>Smithmas List</title>
   </head>
   <body>
