fix: update url in index.url after removing "app" from the project name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <!-- Open Graph / Social Media Meta Tags -->
     <meta property="og:title" content="Smithmas Wishlist" />
     <meta property="og:description" content="Tell us what you'd like for Christmas!" />
-    <meta property="og:image" content="https://vue-wishlist-app.vercel.app/really_big_santa_banana.png" />
+    <meta
+      property="og:image"
+      content="https://vue-wishlist.vercel.app/really_big_santa_banana.png"
+    />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
 
